# freedom

./: .gitignore  CMakeLists.txt  README.md
src/: abstract_dom.hpp  abstract_lexer.cpp  abstract_lexer.hpp  abstract_parser.cpp  abstract_parser.hpp  client.cpp  client.hpp  common.cpp  common.hpp  exceptions.hpp  freedom_global.hpp  json.cpp  json.hpp  xml.cpp  xml.hpp
tests/: CMakeLists.txt
tests/json/: CMakeLists.txt  tst_jsontestcase.cpp
tests/xml/: CMakeLists.txt  large.xml  regular.xml  tst_xmltestcase.cpp
